google earth engine authenticated and connected

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/WITS_LOGO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FEBE R&I Portal</title>
+    <title>SDSS portal</title>
   </head>
   <body>
     <div id="root"></div>
